@@ -13,7 +13,7 @@ public class CheckBoxField extends TextField {
 	public CheckBoxField(Object model,String name) {
 		super(model,name);
 		this.propertie.put("type", "checkbox");
-		this.propertie.put("check", new Boolean(true));
+		this.propertie.put("check",  Boolean.valueOf(true));
 	}
 	
 }
