@@ -16,8 +16,8 @@ public class ImageField extends AbstractField {
 		this.propertie.put("name","p_"+name);
 		this.propertie.put("img", "http://www.slidesjs.com/examples/callbacks/img/example-slide-1.jpg");
 		this.propertie.put("placeholder", "");
-		this.propertie.put("right", new Boolean(false));
-		this.propertie.put("maxlength", new Integer(30));
+		this.propertie.put("right", Boolean.valueOf(false));
+		this.propertie.put("maxlength", Integer.valueOf(30));
 		this.configValue(model);
 	}
 
